--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.3.0
   dio: ^5.8.0+1
   json_annotation: ^4.9.0
+  pretty_dio_logger: ^1.4.0
+  internet_connection_checker: ^1.0.0+1
+  get_it: ^8.0.3
+  internet_connection_checker_plus: ^2.7.1
+  fpdart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
