--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fpdart: ^1.1.1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
