--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   fl_chart: ^0.70.2
+  tab_container: ^3.5.3
 
 dev_dependencies:
   flutter_test:
