--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   fl_chart: ^0.70.2
   tab_container: ^3.5.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
