--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
+  simple_icons: ^14.6.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/players.json
+      - assets/guillotine.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
